fix(grid): fix outline overlap, grid size text on reset, and reduce opacity

--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@
 .col {
     flex: 0 0 calc(100% / var(--grid-size));
     aspect-ratio: 1 / 1;
-    /* border: 0.5px solid black; */
-    /* outline: 1px solid #000; */
     box-sizing: border-box;
 }
 .show-grid {
-    outline: 1px solid #000;
+    /* outline: 1px solid #000; */
+    outline: 1px solid rgba(0, 0, 0, 0.25);
+    outline-offset: -1px;
 }
 
 /* button colors */
